# fidmaa-simple-viewer

./: CLAUDE.md  README.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: build.yml
src/fidmaa_simple_viewer/: core.py
tests/: test_core.py
