[project]
name = "fidmaa-simple-viewer"
version = "0.1.2"
description = "Simple viewer for depth-mapped images"
authors = [
    { name = "Michał Pasternak", email = "michal.dtz@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26.4",
    "pyvista>=0.43.4",
    "portrait-analyser>=0.2.0",
    "click>=8.1.7",
]

[project.scripts]
display_fidmaa_image = "fidmaa_simple_viewer.core:display_fidmaa_image"

[dependency-groups]
dev = [
    "pytest>=8.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
